--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "reimagined-disco-frontend",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.27",
+    "graphql": "^14.1.1",
     "react": "^16.7.0",
+    "react-apollo": "^2.4.1",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
   },
